--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
       <a href="#" class="logo">Portfolio</a>
 
       <nav class="navbar">
-        <a href="#">Home</a>
-        <a href="#">about</a>
-        <a href="#">services</a>
+        <a href="#" class="active">Home</a>
+        <a href="#">About</a>
+        <a href="#">Services</a>
         <a href="#">Portfolio</a>
-        <a href="#">contact</a>
+        <a href="#">Contact</a>
       </nav>
     </header>
   </body>
