--- a/index.html
+++ b/index.html
@@ -14,19 +14,6 @@
 
   <body>
     <header>
-      <section class="Home">
-        <div class="Home-content">
-          <h1>Hi, I'm Hong GillDong</h1>
-          <h3>Frontend Developer</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure
-            nostrum natus animi aut? Nesciunt modi totam aperiam voluptate
-            praesentium similique itaque nemo. Explicabo et assumenda possimus
-            quas iusto dolorem reprehenderit.
-          </p>
-        </div>
-      </section>
-
       <a href="#" class="logo">Portfolio</a>
 
       <nav class="navbar">
@@ -37,5 +24,18 @@
         <a href="#">Contact</a>
       </nav>
     </header>
+
+    <section class="Home">
+      <div class="Home-content">
+        <h1>Hi, I'm Hong GillDong</h1>
+        <h3>Frontend Developer</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure nostrum
+          natus animi aut? Nesciunt modi totam aperiam voluptate praesentium
+          similique itaque nemo. Explicabo et assumenda possimus quas iusto
+          dolorem reprehenderit.
+        </p>
+      </div>
+    </section>
   </body>
 </html>
