--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       </nav>
     </header>
 
-    <section class="Home">
-      <div class="Home-content">
+    <section class="home">
+      <div class="home-content">
         <h1>Hi, I'm Hong GillDong</h1>
         <h3>Frontend Developer</h3>
         <p>
@@ -34,6 +34,10 @@
           similique itaque nemo. Explicabo et assumenda possimus quas iusto
           dolorem reprehenderit.
         </p>
+        <div class="btn-box">
+          <a href="#">고용하기</a>
+          <a href="#">연락하기</a>
+        </div>
       </div>
     </section>
   </body>
