--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
           <a href="#">고용하기</a>
           <a href="#">연락하기</a>
         </div>
+
+        <div class="home-sci">
+          <a href="#"><i class="bx bxl-facebook"></i></a>
+          <a href="#"><i class="bx bxl-instagram"></i> </a>
+          <a href="#"> <i class="bx bxl-twitter"></i></a>
+        </div>
       </div>
     </section>
   </body>
