--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
           <a href="#"><i class="bx bxl-instagram"></i> </a>
           <a href="#"> <i class="bx bxl-twitter"></i></a>
         </div>
+        <div class="home-sci">
+          <a href="#"><i class="bx bxl-facebook"></i></a>
+          <a href="#"><i class="bx bxl-instagram"></i> </a>
+          <a href="#"> <i class="bx bxl-twitter"></i></a>
+        </div>
+        <span class="home-imgHover"></span>
       </div>
     </section>
   </body>
