이미지 하버효과

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <a href="#"><i class="bx bxl-instagram"></i> </a>
           <a href="#"> <i class="bx bxl-twitter"></i></a>
         </div>
-        <span class="home-imgHover"></span>
+        <span class="home-imghover"></span>
       </div>
     </section>
   </body>
